# LibOpenGDS

./: CMakeLists.txt  GDSII.txt  README.md
doc/: BaseClasses.dia  BaseClasses.xmi  Clases.xmi
